--- a/style.css
+++ b/style.css
@@ -26,21 +26,19 @@ body{
 
 .button{
 	font-size: 150%;
-	padding: 10px 30px;
-	text-align: center;
 	background-color: #9400D3;
 	color: #D3D3D3;
 	border-style: none;
 	box-shadow: 2px 2px 3px 1px #666;
     -moz-box-shadow: 2px 2px 3px 1px #666;
     -webkit-box-shadow: 2px 2px 3px 1px #666;
-	
+	text-align: center;
 	text-shadow: 1px 1px 2px #000;
 	
 	-moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-	background:linear-gradient(to bottom, #FF00FF,	#4B0082);
+	background:linear-gradient(to bottom, #ADFF2F, #008B8B);
 }
 .button:hover{
 	opacity: 0.6;
