--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
 	top: 30px;
 	right: 30px;
 }
+#sityou{
+	position: absolute;
+	top: 200px;
+	right: 400px;
+}
 body{
 	background-color: #d8edfc;
 	color: #000000;
@@ -25,7 +30,7 @@ body{
 }
 
 .button{
-	font-size: 150%;
+	font-size: 130%;
 	background-color: #9400D3;
 	color: #D3D3D3;
 	border-style: none;
@@ -38,8 +43,12 @@ body{
 	-moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-	background:linear-gradient(to bottom, #ADFF2F, #008B8B);
+	background: #000000;
 }
 .button:hover{
 	opacity: 0.6;
 }
+
+
+
+
