--- a/style.css
+++ b/style.css
@@ -13,7 +13,13 @@
 #sityou{
 	position: absolute;
 	top: 200px;
-	left: 650px;
+	left: 550px;
+}
+#zem{
+	position: absolute;
+	top: 150px;
+	left: 900px;
+	border: 2px solid #4B0082;
 }
 body{
 	background-color: #d8edfc;
