--- a/style.css
+++ b/style.css
@@ -12,14 +12,19 @@
 }
 #sityou{
 	position: absolute;
-	top: 200px;
-	left: 550px;
+	top: 250px;
+	left: 300px;
 }
 #zem{
 	position: absolute;
 	top: 150px;
-	left: 900px;
+	left: 650px;
 	border: 2px solid #4B0082;
+}
+#twitter{
+	position: absolute;
+	top: 150px;
+	left: 1000px;
 }
 body{
 	background-color: #d8edfc;
