--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ a{
     text-decoration:none;
 }
 
+a:hover{
+    /*font-color: #FF0000;*/
+    background-color: #000000;
+}
+
 .header{
     text-align: center;
     font-size: 600%;
