--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     
     background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(horse.jpg);
     background-size:cover;
+    background-attachment:fixed;
 }
 
 a{
