--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ a:hover{
 .main{
     margin-top: 30px;
     padding: 20px;
+    overflow: hidden;
+}
+
+.submain{
+    float: left;
 }
 
 .topic{
@@ -51,6 +56,14 @@ a:hover{
 .component{
     font-family: 'Noto Serif', serif;
     font-size: 150%;
+}
+
+.vanish{
+    text-align: center;
+    font-size:150%;
+    font-family: 'Noto Serif', serif;
+    background: radial-gradient(#F2B9A1, #8B008B);
+    border-radius: 50%;
 }
 
 .footer{
