--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body{
     
     background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(horse.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size:cover;
     background-attachment:fixed;
 }
