--- a/tablet.css
+++ b/tablet.css
@@ -1,9 +1,7 @@
-@media screen and (min-width: 769px){
+@media screen and (max-width: 768px){
     body{
         
         background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(horse.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
         background-size:cover;
         background-attachment:fixed;
     }
@@ -14,7 +12,7 @@
     }
 
     a:hover{
-        /*font-color: #FF0000;*/
+        color: #FF0000;*/
         background-color: #000000;
     }
 
@@ -28,12 +26,8 @@
     .main{
         margin-top: 30px;
         padding: 20px;
-        overflow: hidden;
     }
 
-    .submain{
-        float: left;
-    }
 
     .topic{
         background-color:rgba(0,255,255,.2);
@@ -59,6 +53,10 @@
     .component{
         font-family: 'Noto Serif', serif;
         font-size: 150%;
+    }
+    
+    #gimmick{
+        display:"none";
     }
 
     .vanish{
