--- a/tablet.css
+++ b/tablet.css
@@ -1,68 +1,66 @@
-@media screen and (max-width: 900px){
-    body{
-        
-        background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(horse.jpg);
-        background-size:cover;
-        background-attachment:fixed;
-    }
-
-    a{
-        font-color:	#00BFFF;
-        text-decoration:none;
-    }
-
-    a:hover{
-        color: #FF0000;*/
-        background-color: #000000;
-    }
-
-    .header{
-        text-align: center;
-        font-size: 600%;
-        color: #000080;
-        font-family: 'Dancing Script', cursive;
-    }
-
-    .main{
-        margin-top: 30px;
-        padding: 20px;
-    }
-
-
-    .topic{
-        background-color:rgba(0,255,255,.2);
-        margin: 10px;
-        padding: 10px;
-        border-radius: 5%;
-    }
-
-    .subheader{
-        text-align: center;
-        font-size: 350%;
-        border-bottom: 1px solid #000080;
-        font-family: 'Baloo Bhai', cursive;
-        color:#8B4513;
-    }
-
-    .category{
-        font-size: 200%;
-        font-family: 'Noto Serif', serif;
-        padding: 10px;
-    }
-
-    .component{
-        font-family: 'Noto Serif', serif;
-        font-size: 150%;
-    }
+body{
     
-    #gimmick{
-        display:"none";
-    }
+    background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(horse.jpg);
+    background-size:cover;
+    background-attachment:fixed;
+}
 
-    .footer{
-        text-align: right;
-        font-size: 120%;
-        font-family: 'Noto Serif', serif;
-        margin-top: 30px;
-    }
+a{
+    font-color:	#00BFFF;
+    text-decoration:none;
+}
+
+a:hover{
+    color: #FF0000;*/
+    background-color: #000000;
+}
+
+.header{
+    text-align: center;
+    font-size: 600%;
+    color: #000080;
+    font-family: 'Dancing Script', cursive;
+}
+
+.main{
+    margin-top: 30px;
+    padding: 20px;
+}
+
+
+.topic{
+    background-color:rgba(0,255,255,.2);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5%;
+}
+
+.subheader{
+    text-align: center;
+    font-size: 350%;
+    border-bottom: 1px solid #000080;
+    font-family: 'Baloo Bhai', cursive;
+    color:#8B4513;
+}
+
+.category{
+    font-size: 200%;
+    font-family: 'Noto Serif', serif;
+    padding: 10px;
+}
+
+.component{
+    font-family: 'Noto Serif', serif;
+    font-size: 150%;
+}
+
+#gimmick{
+    display:none;
+}
+
+.footer{
+    text-align: right;
+    font-size: 120%;
+    font-family: 'Noto Serif', serif;
+    margin-top: 30px;
 }
