--- a/tablet.css
+++ b/tablet.css
@@ -1,6 +1,6 @@
 body{
     
-    background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(horse.jpg);
+    background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(flower.jpg);
     background-size:cover;
     background-attachment:fixed;
 }
