--- a/tablet.css
+++ b/tablet.css
@@ -1,5 +1,5 @@
 body{
-    background-color:linear-gradient(-45deg, rgba(246, 255, 0, .8);
+    background:linear-gradient(-135deg, #E4A972, #9941D8);
 }
 
 a{
