--- a/tablet.css
+++ b/tablet.css
@@ -57,9 +57,10 @@ a:hover{
 
 .footer{
     background-color:rgba(255,255,255,.5);
-    border-radius: 5%;
+    color: #006400;
     text-align: right;
     font-size: 120%;
     font-family: 'Noto Serif', serif;
     margin-top: 30px;
+    border-radius: 5%;
 }
