--- a/tablet.css
+++ b/tablet.css
@@ -58,9 +58,9 @@ a:hover{
 .footer{
     background-color:rgba(255,255,255,.5);
     color: #006400;
-    text-align: right;
+    text-align: center;
     font-size: 120%;
     font-family: 'Noto Serif', serif;
-    margin-top: 30px;
+    margin: 30px;
     border-radius: 5%;
 }
