--- a/tablet.css
+++ b/tablet.css
@@ -62,5 +62,7 @@ a:hover{
     font-size: 120%;
     font-family: 'Noto Serif', serif;
     margin: 30px;
-    border-radius: 5%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 10%;
 }
