--- a/tablet.css
+++ b/tablet.css
@@ -3,13 +3,16 @@ body{
 }
 
 a{
-    font-color:	#00BFFF;
     text-decoration:none;
 }
-
-a:hover{
-    color: #FF0000;
-    background-color: #000000;
+a:link{
+    color: #0000FF;
+}
+a:active{
+    color: #0000FF;
+}
+a:visited{
+    color: #0000FF;
 }
 
 .header{
