--- a/tablet.css
+++ b/tablet.css
@@ -4,27 +4,23 @@ body{
 
 a{
     text-decoration:none;
+    padding: 5px;
+    border-radius: 100%;
 }
+
 a:link{
-    color: #0000FF;
-}
-a:active{
     color: #0000FF;
 }
 a:visited{
     color: #0000FF;
 }
-
-.header{
-    text-align: center;
-    font-size: 600%;
-    color: #000080;
-    font-family: 'Dancing Script', cursive;
+a:active:{
+    color: #0000FF;
 }
 
-.main{
-    margin-top: 30px;
-    padding: 20px;
+a:hover{
+    background-color: rgba(0,0,0,.4);
+    color: #E6E6FA;
 }
 
 
