--- a/tablet.css
+++ b/tablet.css
@@ -23,6 +23,18 @@ a:hover{
     color: #E6E6FA;
 }
 
+.header{
+    text-align: center;
+    font-size: 600%;
+    color: #000080;
+    font-family: 'Dancing Script', cursive;
+}
+
+.main{
+    margin-top: 30px;
+    padding: 20px;
+    overflow: hidden;
+}
 
 .topic{
     background-color:rgba(0,255,255,.2);
