--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body{
-    
     background:linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8)),url(horse.jpg);
     background-size:cover;
     background-attachment:fixed;
@@ -69,12 +68,22 @@ a:hover{
     font-size: 150%;
 }
 
+.black{
+    text-align: center;
+    font-size: 200%;
+    font-family: 'Noto Serif', serif;
+    background: radial-gradient(#FFFFFF, #000000);
+    border-radius: 50%;
+    padding: 10px;
+}
+
 .vanish{
     text-align: center;
-    font-size:150%;
+    font-size:200%;
     font-family: 'Noto Serif', serif;
     background: radial-gradient(#F2B9A1, #8B008B);
     border-radius: 50%;
+    padding: 10px;
 }
 
 .footer{
