--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a:hover{
     color: #000080;
     font-family: 'Dancing Script', cursive;
 }
-
+/*
 .free{
     width: 50px;
     height: 50px;
@@ -55,6 +55,7 @@ a:hover{
         opacity: 0;
     }
 }
+*/
 
 .main{
     margin-top: 30px;
@@ -102,13 +103,24 @@ a:hover{
     100%{color: #8B4513;}
 }
 
+.swell{
+    text-align: center;
+    font-size: 200%;
+    font-family: 'Noto Serif', serif;
+    background: radial-gradient(#FFFFFF, #0000FF);
+    border-radius: 50%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .black{
     text-align: center;
     font-size: 200%;
     font-family: 'Noto Serif', serif;
     background: radial-gradient(#FFFFFF, #000000);
     border-radius: 50%;
-    padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .vanish{
@@ -117,7 +129,8 @@ a:hover{
     font-family: 'Noto Serif', serif;
     background: radial-gradient(#F2B9A1, #8B008B);
     border-radius: 50%;
-    padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .footer{
