--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a:hover{
     padding: 20px;
     overflow: hidden;
     border-radius: 10%;
+    transition: all 2s;
 }
 
 .submain{
@@ -111,6 +112,7 @@ a:hover{
     border-radius: 50%;
     padding-top: 20px;
     padding-bottom: 20px;
+    transition: all 1s;
 }
 
 .black{
